# learning_flusk_proj

./: README.md  app.py  incialization_module.py  init_app.py  logger.py  models.py  pyproject.toml  setup_app.py  views.py
templates/: login.html  register.html
