[tool.poetry]
name = "learning-flusk-proj"
version = "0.1.0"
description = ""
authors = ["aleksandrmoisievich <moisievich@vataga.trading>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
flask = "3.0.3"
flask-admin = "1.6.1"
python-dotenv = "1.0.1"
flask-sqlalchemy = "3.1.1"
flask-wtf = "1.2.2"
wtforms-alchemy = "0.18.0"
flask-login = "0.6.3"


[tool.poetry.group.dev.dependencies]
ruff = "0.7.1"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
